# mlcg

./: CMakeLists.txt  README  README.md
MATILDA_Graphs/: README  g0001.col  g0001.sol  g0002.allsol  g0002.col  g0002.sol  g0003.col  g0003.sol  g0004.allsol  g0004.col  g0004.sol  g0005.allsol  g0005.col  g0005.sol  g0006.col  g0006.sol  g0007.allsol  g0007.col  g0007.sol  g0008.allsol  g0008.col  g0008.sol  g0009.allsol  g0009.col  g0009.sol  g0010.allsol  g0010.col  g0010.sol  g0011.allsol  g0011.col  g0011.sol  g0012.allsol  g0012.col  g0012.sol  g0013.allsol  g0013.col  g0013.sol  g0014.allsol  g0014.col  g0014.sol  (+1143 more)
src/: decision_tree.h  instance.cpp  instance.h  main.cpp  reduce.cpp  reduce.h  solver.cpp  solver.h  training.cpp  training.h
